<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Cikgood Tentor</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="profile_fragment">My Profile</string>
    <string name="store_fragment">My Store</string>
    <string name="title_activity_maps">Map</string>
    <string name="Lat">Latitude</string>
    <string name="Lng">Longitude</string>
    <string name="Add">Nama</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="nama">Nama Lengkap</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">SIGN IN</string>
    <string name="btn_sign_in_fb">SIGN IN WITH FACEBOOK</string>
    <string name="btn_sign_in_g">SIGN IN WITH GOOGLE</string>
    <string name="btn_link_to_register">Not a member? Get registered in Cikgood now!</string>
    <string name="btn_link_to_login">Sudah Mendaftar. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Lupa Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="action_settings">Settings</string>
    <string name="action_leave">Sign out</string>
    <string name="facebook_app_id">335706460584535</string>
    <string name="fb_login_protocol_scheme">fb335706460584535</string>
    <string name="cancel_login">Login Canceled</string>
    <string name="error_login">Login Errors</string>
    <string name="firebase_error_login">Firebase Error</string>
    <string name="facebook_status_fmt">Facebook Status</string>
    <string name="firebase_status_fmt">Firebase Status</string>
    <string name="action_search">Cari</string>
    <string name="notif">Notifikasi</string>
    <string name="title_activity_cari_guru">CariGuru</string>
    <string name="bio">Biodata</string>
    <string name="pend">Pendidikan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_hp">Nomor Handphone</string>
    <string name="edit">Edit</string>
    <string name="alamat">Alamat Lengkap</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="lk">Laki-laki</string>
    <string name="pr">Perempuan</string>
    <string name="nisn">NISN</string>
    <string name="kelas">Kelas</string>
    <string name="nama_sekolah">Nama Sekolah</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="string_choose_file">Chouse Image</string>
    <string name="string_upload_image">Upload Images</string>
    <string name="string_view_image">View Images</string>
    <string name="password">Password</string>
    <string name="text_home">Home</string>
    <string name="text_profil">Profil</string>
    <string name="text_pemesanan">Pemesanan</string>
    <string name="akun">Akun</string>
    <string name="syaratdanketentuan"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="kebijakanprivasi">Kebijakan Privasi</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="bantuan">Bantuan</string>
    <string name="bahasa">Bahasa</string>
    <string name="Tentang">Tentang</string>
    <string name="version">Versi 1</string>
    <string name="ulasan">Beri Ulasan</string>
    <string name="laporkanmasalah">Laporkan Masalah</string>
    <string name="keluar">Keluar</string>
    <string name="provinsiKtp">Provinsi (KTP)</string>
    <string name="kotaKtp">Kota (KTP)</string>
    <string name="alamatKtp">Alamat Lengkap (KTP)</string>
    <string name="provinsiDomisili">Provinsi (Domisili)</string>
    <string name="kotaDomisili">Kota/Kabupaten (Domisili)</string>
    <string name="kecDomisili">Kecamatan (Domisli)</string>
    <string name="alamatDomisili">Alamat Lengkap (Domisili)</string>
    <string name="kecKtp">Kecamatan (KTP)</string>
    <string name="biodata">Biodata</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="pengalaman_mengajar">Pengalaman Mengajar</string>
    <string name="pengalaman_kerja">Pengalaman Kerja</string>
    <string name="riwayat_pendidikan">Riwayat Pendidikan</string>
    <string name="NB">NB :</string>
    <string name="isi_nb">Klik tombol diatas untuk mengisikan data Anda.!</string>
    <string name="pengalaman_tgl_masuk">Tanggal Masuk</string>
    <string name="pengalaman_tgl_keluar">Tanggal Keluar</string>
    <string name="judul_pengalaman_mengajar">Pengalaman Mengajar</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="lengkapi_pengalaman_mengajar">Lengkapi Pengalaman Anda</string>
    <string name="lengkapi_pengalaman_mengajar_isi">Informasi mengenai pengalaman Anda menjadi elemen penting untuk pemilihan guru. Murid Cikgood akan memilih guru yang memiliki pengalaman cukup, sesuai, dan kredibel. Pastikan Anda mengisi kelengkapan pengalaman Anda dengan seksama.</string>
    <string name="tambah_baru">Tambah Baru</string>
    <string name="histori_mengajar">Histori Pengalaman Mengajar</string>
    <string name="pengalaman_jabatan">Nama Jabatan</string>
    <string name="judul_pengalaman_kerja">Pengalaman Kerja</string>
    <string name="pengalaman_perusahaan">Nama Perusahaan</string>
    <string name="jenis_institusi">Jenis Institusi</string>
    <string name="nama_institusi">Nama Institusi</string>
    <string name="jurusan">Jurusan</string>
    <string name="tahun_masuk">Tahun Masuk</string>
    <string name="tahun_selesai">Tahun Selesai</string>
    <string name="photo_ijazah">Photo Ijazah</string>
    <string name="gelar">Gelar</string>
    <string name="judul_riwayat_pendidikan">Riwayat Pendidikan</string>
    <string name="photo_jazah">Photo Ijazah</string>
    <string name="dokumen">Dokumen (Penghargaan, Sertifikat, CV)</string>
    <string name="jenis_dokumen">Jenis Dokumen</string>
    <string name="nama_dokumen">Nama Dokumen</string>
    <string name="tahun">Tahun</string>
    <string name="photo_dokumen">Photo Dokumen</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="photo_ktp">Photo KTP</string>
    <string name="nomor_npwp">Nomor NPWP</string>
    <string name="photo_npwp">Photo NPWP</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="no_rek">Nomor Rekening</string>
    <string name="nama_rek">Nama Pemilik Rekening</string>
    <string name="lengkapi_bahan_ajar_isi">Data berikut akan digunakan untuk mesin pencarian kami. Tanpa informasi lokasi mengajar, pelajaran, beserta harga per jam yang Anda tawarkan, pengguna akan kesulitan menilai profil Anda. Sehingga, kemungkinan Anda untuk dipilih untuk mengajar menjadi lebih kecil.</string>
    <string name="lengkapi_bahan_ajar_judul">Lengkapi Bahan Ajar Anda</string>
    <string name="lokasi_mengajar">Lokasi Mengajar (Max.5)</string>
    <string name="mata_pelajaran">Mengajar Mata Pelajaran</string>
    <string name="judul_lokasi">Lokasi Mengajar</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="kec">Kecamatan</string>
    <string name="matpel">Pilih Mata Pelajaran</string>
    <string name="tarif">Tarif per jam (dalam rupiah)</string>
    <string name="lengkapi_jadwal_judul">Lengkapi Jadwal Mengajar Anda</string>
    <string name="jadwal_isi">Pastikan Anda mengisi jadwal kosong Anda untuk digunakan mengajar di Ruangguru. Kami akan memilih guru berdasarkan jadwal yang diisikan di halaman ini.

</string>
    <string name="jadwal">Jadwal Mengajar</string>
    <string name="judul_jadwal">Jadwal Mata Pelajaran</string>
    <string name="hari">Pilih Hari</string>
    <string name="jam">Pilih Jam</string>
    <string name="pagi">Pagi (09:00 - 14:00)</string>
    <string name="siang">Siang (14:00 - 18:00)</string>
    <string name="malam">Malam (18:00 - 22:00)</string>
    <string name="chat">Chat</string>
</resources>
