<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.saulmm.myapplication.MainActivity">

    <item
        android:id="@+id/action_notif"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        app:showAsAction="always"
        android:title="@string/notif"/>

    <item
        android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_leave"
        android:title="@string/action_leave"
        app:showAsAction="never"/>
</menu>