<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgray"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/akun"
            android:textSize="18dp"
            android:textColor="@color/colorAccent"/>
        <View
            android:layout_marginTop="14dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="14dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"/>
        <TextView
            android:typeface="sans"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/syaratdanketentuan"/>
        <TextView
            android:typeface="sans"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="18dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kebijakanprivasi"/>
    </LinearLayout>

   <LinearLayout
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/pengaturan"
                android:textSize="18dp"
                android:textColor="@color/colorAccent"/>
            <View
                android:layout_marginTop="14dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="14dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"/>
            <TextView
                android:typeface="sans"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bahasa"/>
            <TextView
                android:typeface="sans"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="18dp"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bantuan"/>
        </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/Tentang"
            android:textSize="18dp"
            android:textColor="@color/colorAccent"/>
        <View
            android:layout_marginTop="14dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="14dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"/>
        <TextView
            android:typeface="sans"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"/>

        <TextView
            android:clickable="true"
            android:id="@+id/tv_laporkanMasalah"
            android:typeface="sans"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="18dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laporkanmasalah"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_keluar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textStyle="bold"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/keluar"
            android:textSize="18dp"
            android:textColor="@color/wallet_bright_foreground_holo_light"/>
    </LinearLayout>

    </LinearLayout>

