<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/judul_riwayat_pendidikan"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/etFormGelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gelar"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <Spinner
            android:id="@+id/etFormJenisInstitusi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:hint="@string/jenis_institusi"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/etFormGuruId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/pengalaman_tgl_keluar"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/etFormPengalamanTglMasuk" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/etFormNamaInstitusi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_institusi"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/etFormJurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jurusan"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/etFormTahunMasuk"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:hint="@string/tahun_masuk"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/etFormTahunSelesai"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:hint="@string/tahun_selesai"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:text="@string/photo_ijazah"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@+id/editText"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:layout_marginStart="167dp"
            android:layout_marginLeft="167dp"
            android:layout_marginTop="-30dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/button"
            android:src="@drawable/download" />

    </RelativeLayout>

</LinearLayout>